--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -84,11 +84,6 @@
     <Content Include="assets\img\portfolio\portfolio-details-3.jpg" />
     <Content Include="assets\img\profile-pic.jpg" />
     <Content Include="assets\img\scott-webb-qauaqihMwpc-unsplash.jpg" />
-    <Content Include="assets\img\testimonials\testimonials-1.jpg" />
-    <Content Include="assets\img\testimonials\testimonials-2.jpg" />
-    <Content Include="assets\img\testimonials\testimonials-3.jpg" />
-    <Content Include="assets\img\testimonials\testimonials-4.jpg" />
-    <Content Include="assets\img\testimonials\testimonials-5.jpg" />
     <Content Include="assets\js\main.js" />
     <Content Include="assets\vendor\aos\aos.css" />
     <Content Include="assets\vendor\aos\aos.js" />
@@ -285,6 +280,9 @@
     <Content Include="_archive\Kelly\assets\vendor\boxicons\fonts\boxicons.ttf" />
     <Content Include="_archive\Kelly\assets\vendor\boxicons\fonts\boxicons.woff" />
     <Content Include="_archive\Kelly\assets\vendor\boxicons\fonts\boxicons.woff2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="assets\img\testimonials\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
