Added images and links for 13 classmates as well as placeholder content.

--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -70,6 +70,19 @@
     <Content Include="assets\css\classmates.css" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
+    <Content Include="assets\img\classmates\Austin.jpg" />
+    <Content Include="assets\img\classmates\Ben.jpg" />
+    <Content Include="assets\img\classmates\Connor.jpg" />
+    <Content Include="assets\img\classmates\Ian.jpg" />
+    <Content Include="assets\img\classmates\Jazmine.jpg" />
+    <Content Include="assets\img\classmates\Justin.jpg" />
+    <Content Include="assets\img\classmates\Kayla.jpg" />
+    <Content Include="assets\img\classmates\Matt.jpg" />
+    <Content Include="assets\img\classmates\Michael.jpg" />
+    <Content Include="assets\img\classmates\Payton.jpg" />
+    <Content Include="assets\img\classmates\Placeholder.png" />
+    <Content Include="assets\img\classmates\Sean.jpg" />
+    <Content Include="assets\img\classmates\Zak.jpg" />
     <Content Include="assets\img\favicon.png" />
     <Content Include="assets\img\portfolio\portfolio-1.jpg" />
     <Content Include="assets\img\portfolio\portfolio-2.jpg" />
