Utiltized the Portfolio.html template to create a grid for Alpha and Dragon. Alpha opens in a glightbox and Dragon opens in Github.

--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -84,18 +84,8 @@
     <Content Include="assets\img\classmates\Sean.jpg" />
     <Content Include="assets\img\classmates\Zak.jpg" />
     <Content Include="assets\img\favicon.png" />
-    <Content Include="assets\img\portfolio\portfolio-1.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-2.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-3.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-4.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-5.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-6.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-7.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-8.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-9.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-details-1.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-details-2.jpg" />
-    <Content Include="assets\img\portfolio\portfolio-details-3.jpg" />
+    <Content Include="assets\img\portfolio\alpha.jpg" />
+    <Content Include="assets\img\portfolio\dragon.jpg" />
     <Content Include="assets\img\profile-pic.jpg" />
     <Content Include="assets\img\scott-webb-qauaqihMwpc-unsplash.jpg" />
     <Content Include="assets\js\main.js" />
