--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -67,7 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="assets\css\classmates.css" />
+    <Content Include="assets\css\custom.css" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
     <Content Include="assets\img\classmates\Austin.jpg" />
